--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -6,7 +6,6 @@
 .a{
     height: 100vh;
     display: flex;
-    gap: 2px;
     align-items: center;
     /* padding: 0 10%; */
 }
@@ -17,8 +16,15 @@
     align-items: center;
     justify-content: center;
     position: relative;
-    height: 100%;
-    
+}
+
+
+.blob{
+    background: url("../../img/me.png");
+    background-size: cover;
+    background-position: center center;
+    height: 450px;
+    width: 450px;
 }
 
 .a-right{
@@ -29,37 +35,6 @@
 .a-right__content{
     width: 80%;
 }
-
-.a-card.bg{
-    position: absolute;
-    /* top: 40px;
-    left: 50px; */
-    background: var(--gradient);
-    border-radius: 50%;
-    box-shadow: 10px 8px 6px rgba(128, 128, 128, 0.301);
-}
-
-.a-card{
-    width: 70%;
-    height: 80vh;
-    border-radius: 30px;
-    position: relative;
-    overflow: hidden;
-}
-
-.a-img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 50%;
-}
-
-.a-award-img{
-    width: 130px;
-    height: 130px;
-    border-radius: 20px;
-}
-
 
 .a-title{
     font-weight: 200;
@@ -72,6 +47,7 @@
 
 .a-desc{
     font-weight: 300;
+    font-size: 1rem;
 }
 
 .a-cv{
@@ -87,6 +63,7 @@
     cursor: pointer;
     text-decoration: none;
     text-transform: uppercase;
+    border-radius: 5px;
 }
 
 .a-cv-item:hover{
