--- a/src/components/contacts/contact.css
+++ b/src/components/contacts/contact.css
@@ -60,17 +60,21 @@ input{
     width: 50%;
     height: 50px;
     border: none;
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid #00000044;
     margin: 10px 0px;
     font-size: 14px;
     padding-left: 10px;
+    outline: none;
 }
 
 textarea{
+    border: none;
     width: 100%;
     margin: 10px 0px;
     font-size: 14px;
     padding-left: 10px;
+    border-bottom: 1px solid #00000044;
+    outline: none;
 }
 
 button{
