--- a/src/components/contacts/contact.css
+++ b/src/components/contacts/contact.css
@@ -1,134 +1,117 @@
-:root{
-    --violet-primary: #647dee;
+:root {
+  --violet-primary: #647dee;
 }
 
-.c{
-    height: 90vh;
-    position: relative;
+.c {
+  height: 90vh;
+  position: relative;
 }
 
-.c-bg{
-    width: 20px;
-    height: 100%;
-    background: var(--violet-primary);
-    position: absolute;
+.c-bg {
+  width: 20px;
+  height: 100%;
+  background: var(--violet-primary);
+  position: absolute;
 }
 
-.c-wrapper{
-    padding: 50px;display: flex;
+.c-wrapper {
+  padding: 50px;
+  display: flex;
 }
 
-.c-left{
-    flex: 1;
+.c-left {
+  flex: 1;
 }
 
-.c-right{
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.c-right {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.c-title{
-    font-size: 60px;
-    width: 80%;
+.c-title {
+  font-size: 60px;
+  width: 80%;
 }
 
-.c-info-item{
-    display: flex;
-    align-items: center;
-    margin: 50px 0px;
-    font-weight: 300;
+.c-info-item {
+  display: flex;
+  align-items: center;
+  margin: 50px 0px;
+  font-weight: 300;
 }
 
-.c-icon{
-    width: 30px;
-    height: 30px;
-    margin-right: 20px;
+.c-icon {
+  width: 30px;
+  height: 30px;
+  margin-right: 20px;
 }
 
-.c-desc{
-    font-weight: 200;
+.c-desc {
+  font-weight: 200;
 }
 
-form{
-    margin-top: 20px;
+form {
+  margin-top: 20px;
 }
 
-input{
-    width: 50%;
-    height: 50px;
-    border: none;
-    border-bottom: 1px solid #00000044;
-    margin: 10px 0px;
-    font-size: 14px;
-    padding-left: 10px;
-    outline: none;
+input {
+  width: 50%;
+  height: 50px;
+  border: none;
+  border-bottom: 1px solid #00000044;
+  margin: 10px 0px;
+  font-size: 14px;
+  padding-left: 10px;
+  outline: none;
 }
 
-textarea{
-    border: none;
-    width: 100%;
-    margin: 10px 0px;
-    font-size: 14px;
-    padding-left: 10px;
-    border-bottom: 1px solid #00000044;
-    outline: none;
+textarea {
+  border: none;
+  width: 100%;
+  margin: 10px 0px;
+  font-size: 14px;
+  padding-left: 10px;
+  border-bottom: 1px solid #00000044;
+  outline: none;
 }
 
-button{
-   border: none;
-   padding: 10px 20px;
-   background: var(--violet-primary);
-   color: white;
-   font-weight: 500;
-   cursor: pointer;  
-   text-transform: uppercase;
-   border-radius: 5px;
+button {
+  border: none;
+  padding: 10px 20px;
+  background: var(--violet-primary);
+  color: white;
+  font-weight: 500;
+  cursor: pointer;
+  text-transform: uppercase;
+  border-radius: 5px;
 }
 
-button:hover{
-    opacity: .8;
+button:hover {
+  opacity: 0.8;
 }
 
-.c-thanks{
-    margin-top: 5px;
+.c-thanks {
+  margin-top: 5px;
 }
 
-@media screen and (max-width: 480px){
-    .c-wrapper{
-        flex-direction: column;
-        padding: 0px 50px;
-    }
+@media (max-width: 20em) {
+}
 
-    .c-title{
-        font-size: 30px;
-    }
+@media (min-width: 20.063em) and (max-width: 30em) {
+  /* Styles for phones in landscape and small tablets */
+}
 
-    .c-info-item{
-        margin: 20px 0px;
-        width: 100%; 
-    }
+@media (min-width: 30.063em) and (max-width: 48em) {
+  /* Styles for tablets and large phones */
+}
 
-    .c-desc{
-        display: none;
-    }
+@media (min-width: 48.063em) and (max-width: 64em) {
+  /* Styles for small screens and desktops */
+}
 
-    form{
-        margin-top: 0px;
-        display: flex;
-        flex-wrap: wrap;
-    }
-
-    input{
-        width: 35%;
-        height: 40px;
-        margin: 10px;
-        margin-left: 0px;
-    }
-
-    button{
-        margin-top: 10px;
-    }
+@media (min-width: 64.063em) and (max-width: 75em) {
+  /* Styles for big screens and large desktops */
 }
