--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -1,134 +1,134 @@
-:root{
-    --violet-primary: #647dee;
-    --violet-secondary: #444CF7;
-    --gradient: linear-gradient(90deg, #647dee, #7f53ac);
+:root {
+  --violet-primary: #647dee;
+  --violet-secondary: #444cf7;
+  --gradient: linear-gradient(90deg, #647dee, #7f53ac);
 }
 
-.i{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    padding: 0 10%;
+.i {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  padding: 0 10%;
 }
 
-.i-left{
-    flex: 2;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 1;
+.i-left {
+  flex: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
 }
 
-.i-right{
-    flex: 1;
-    position: relative;
-    right: 5rem;
-    margin-left: -20rem;
-    
+.i-right {
+  flex: 1;
+  position: relative;
+  right: 5rem;
+  margin-left: -20rem;
 }
 
-.i-left-wrapper{
-    padding: 50px;
-    height: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+.i-left-wrapper {
+  padding: 50px;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.i-intro{
-    font-size: 30px;
-    font-weight: 300;
+.i-intro {
+  font-size: 30px;
+  font-weight: 300;
 }
 
-.i-name{
-    font-size: 60px;
+.i-name {
+  font-size: 60px;
 }
 
-.i-title{
-    height: 50px;
-    overflow: hidden;
+.i-title {
+  height: 50px;
+  overflow: hidden;
 }
 
-.i-title-wrapper{
-    height: 100%;
-    animation: move 10s ease-in-out infinite alternate;
+.i-title-wrapper {
+  height: 100%;
+  animation: move 10s ease-in-out infinite alternate;
 }
 
-.i-desc{
-    width: 80%;
+.i-desc {
+  width: 80%;
 }
 
 @keyframes move {
-    25%{
-        transform: translateY(-50px);
-    }
-    50%{
-        transform: translateY(-100px);
-    }
-    75%{
-        transform: translateY(-150px);
-    }
-    100%{
-        transform: translateY(-200px);
-    }
+  25% {
+    transform: translateY(-50px);
+  }
+  50% {
+    transform: translateY(-100px);
+  }
+  75% {
+    transform: translateY(-150px);
+  }
+  100% {
+    transform: translateY(-200px);
+  }
 }
 
-.i-title-item{
-    height: 50px;
-    font-size: 30px;
-    font-weight: bold;
-    color: var(--violet-primary);
-    display: flex;
-    align-items: center;
+.i-title-item {
+  height: 50px;
+  font-size: 30px;
+  font-weight: bold;
+  color: var(--violet-primary);
+  display: flex;
+  align-items: center;
 }
 
-/* .i-img{
+.i-circle {
+  /* clip-path: circle(40% at 50% 50%); */
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background: var(--violet-secondary);
+  position: relative;
+  animation: move 3s linear infinite;
+  top: 200px;
+  /* right: 0; */
+  /* transform: translateX(-10px); */
+}
+
+@media (max-width: 20em) {
+  /* Styles for phones */
+
+  i {
+    display: block;
+  }
+
+  .i-intro {
+    font-size: 20px;
+  }
+
+  .i-name {
+    font-size: 40px;
+  }
+
+  .i-desc {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-} */
-
-.i-circle{
-    /* clip-path: circle(40% at 50% 50%); */
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    background: var(--violet-secondary);
-    position: relative;
-    animation: move 3s linear infinite;
-    top: 200px;
-    /* right: 0; */
-    /* transform: translateX(-10px); */  
-      
+    margin: auto;
+    text-align: justify;
+  }
 }
 
-/* @keyframes move {
-    from {
-      left: 0;
-    }
-    to {
-      left: 100%;
-    }
-  } */
+@media (min-width: 20.063em) and (max-width: 30em) {
+    /* Styles for phones in landscape and small tablets */
+  }
 
+@media (min-width: 30.063em) and (max-width: 48em) {
+/* Styles for tablets and large phones */
+}
 
+@media (min-width: 48.063em) and (max-width: 64em) {
+    /* Styles for small screens and desktops */
+}
 
-@media screen and (max-width: 480px){
-    .i{
-        flex-direction: column;
-    }
-
-    .i-left-wrapper{
-        padding: 10px;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        height: 100%;
-    }
-
-    .i-desc{
-        display: none;
-    }
+@media (min-width: 64.063em) and (max-width: 75em) {
+    /* Styles for big screens and large desktops */
 }
