--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -4,13 +4,12 @@
   margin: 20px 10px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   border-radius: 10px 10px 0px 0px;
-  transition-delay: 5s;
+  /* transition-delay: 5s; */
   color: black;
   padding: 15px;
 
   display: flex;
   flex-direction: column;
-  /* justify-content: space-between; */
   gap: 5px;
 }
 
@@ -18,16 +17,13 @@
   -webkit-transform: scale(1.1);
   -ms-transform: scale(1.1);
   transform: scale(1.1);
-  color: white;
 }
 
 .p-icons {
   margin-top: 10px;
   display: flex;
   justify-content: right;
-  /* gap: 10px; */
   width: 100%;
-  /* background: blue; */
 }
 
 .icon {
@@ -36,8 +32,7 @@
   color: var(--violet-primary);
 }
 
-.p-text{
-
+.p-text {
 }
 
 .p-title {
@@ -61,9 +56,25 @@
   font-weight: 300;
 }
 
-@media screen and (max-width: 480px) {
+@media (max-width: 20em) {
   .p {
-    width: 40%;
-    height: 20vh;
+    width: 20%;
+    display: block;
   }
+}
+
+@media (min-width: 20.063em) and (max-width: 30em) {
+  /* Styles for phones in landscape and small tablets */
+}
+
+@media (min-width: 30.063em) and (max-width: 48em) {
+  /* Styles for tablets and large phones */
+}
+
+@media (min-width: 48.063em) and (max-width: 64em) {
+  /* Styles for small screens and desktops */
+}
+
+@media (min-width: 64.063em) and (max-width: 75em) {
+  /* Styles for big screens and large desktops */
 }
